--- a/Desktop/task/backend/package.json
+++ b/Desktop/task/backend/package.json
@@ -6,7 +6,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/GreyM22/case-study.git"
+    "url": "git+http://arcane-lowlands-8408.herokuapp.com"
   },
   "author": "grei muka",
   "license": "ISC",
