--- a/Desktop/task/package.json
+++ b/Desktop/task/package.json
@@ -47,6 +47,7 @@
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "ngrx-store-logger": "^0.2.4",
+    "ngx-image-cropper": "^3.1.9",
     "ngx-pagination": "^5.0.0",
     "path": "^0.12.7",
     "redux": "^4.0.5",
