--- a/Desktop/task/backend/package.json
+++ b/Desktop/task/backend/package.json
@@ -1,12 +1,10 @@
 {
   "name": "task",
   "version": "0.0.0",
-  "scripts": {
-    "start": "node server"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
-    "url": "git+http://arcane-lowlands-8408.herokuapp.com"
+    "url": "git+https://github.com/GreyM22/case-study.git"
   },
   "author": "grei muka",
   "license": "ISC",
@@ -19,17 +17,37 @@
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.5.0",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
+    "ngrx-store-logger": "^0.2.4",
+    "ngx-image-cropper": "^3.1.9",
+    "ngx-pagination": "^5.0.0",
     "path": "^0.12.7",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "rxjs": "~6.4.0",
+    "selector": "^2.0.11",
     "sequelize": "^5.21.10",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
-  "engines": {
-    "node": "10.x"
+  "devDependencies": {
+    "codelyzer": "^5.0.0",
+    "jasmine-core": "~3.4.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "^5.0.8",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "nodemon": "^2.0.4",
+    "protractor": "^7.0.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.15.0",
+    "typescript": "~3.5.3"
   }
 }
